Add article 'chrome-tech-talk-night'

--- a/themes/casper/layouts/partials/header.html
+++ b/themes/casper/layouts/partials/header.html
@@ -38,7 +38,9 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/tomorrow-night-eighties.min.css">
 
+    {{ if .RSSLink }}
     <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
+    {{ end }}
 
     {{.Hugo.Generator}}
 
