--- a/themes/casper/layouts/page/list.html
+++ b/themes/casper/layouts/page/list.html
@@ -9,8 +9,11 @@
 	<header class="main-header tag-head no-cover">
 {{end}}
     <nav class="main-nav overlay clearfix">
+      {{.Site.Params.logo}}
       {{ if .Site.Params.logo }}
         <a class="blog-logo" href="{{.Site.BaseURL}}"><img src="{{.Site.BaseURL}}{{ .Site.Params.logo }}" alt="Home" /></a>
+      {{else}}
+        <a class="back-button icon-arrow-left" href="{{ .Site.BaseUrl }}">Home</a>
       {{end}}
       {{ if .Site.Menus.main }}
           <a class="menu-button" href="#"><span class="burger">&#9776;</span><span class="word">Menu</span></a>
