--- a/themes/casper/static/css/screen.css
+++ b/themes/casper/static/css/screen.css
@@ -216,7 +216,7 @@ h4, h5, h6 {
     -o-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
     color: #2E2E2E;
     line-height: 1.15em;
-    margin: 0 0 0.4em 0;
+    margin: 0 0 0.8em 0;
     font-family: "Open Sans", sans-serif;
     text-rendering: geometricPrecision;
 }
@@ -312,7 +312,7 @@ hr {
 blockquote {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    margin: 1.75em 0 1.75em -2.2em;
+    margin: 1.75em 0 1.75em 0;
     padding: 0 0 0 1.75em;
     border-left: #4A4A4A 0.4em solid;
 }
@@ -786,7 +786,9 @@ body.nav-opened .nav {
     padding: 1px 0 5px 0;
     width: auto;
 }
-
+.menu-button.home-button {
+    float: left;
+}
 .menu-button {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -922,10 +924,10 @@ body.nav-opened .menu-button .word {
 .post {
     position: relative;
     width: 80%;
-    max-width: 710px;
+    max-width: 900px;
     margin: 4rem auto;
     padding-bottom: 4rem;
-    border-bottom: #EBF2F6 1px solid;
+    border-bottom: #EBF2F6 1px dashed;
     word-wrap: break-word;
     -moz-hyphens: auto;
     -ms-hyphens: auto;
@@ -933,22 +935,6 @@ body.nav-opened .menu-button .word {
     hyphens: auto;
 }
 
-/* Add a little circle in the middle of the border-bottom on our .post
-   just for the lolz and stylepoints. */
-.post:after {
-    display: block;
-    content: "";
-    width: 7px;
-    height: 7px;
-    border: #E7EEF2 1px solid;
-    position: absolute;
-    bottom: -5px;
-    left: 50%;
-    margin-left: -5px;
-    background: #FFF;
-    border-radius: 100%;
-    box-shadow: #FFF 0 0 0 5px;
-}
 
 body:not(.post-template) .post-title {
     font-size: 3.6rem;
@@ -1053,7 +1039,14 @@ body:not(.post-template) .post-title {
    ========================================================================== */
 
 .post-template .post-header {
-   margin-bottom: 3.4rem;
+    margin-bottom: 3.4rem;
+}
+
+/* changed by negimic */
+.post-list .post-header {
+    margin-bottom: 2.4em;    
+    padding-bottom: 2.4em;
+    border-bottom: #ccc 1px dashed;
 }
 
 .post-template .post-title {
@@ -1577,6 +1570,12 @@ body:not(.post-template) .post-title {
         padding: 0;
     }
 
+    /* changed by negimic */
+    .post-list .post-header {
+        margin-bottom: 2.4em;    
+        padding-bottom: 2.4em;
+        border-bottom: #EBF2F6 1px dashed;
+    }
 }
 
 
@@ -1713,7 +1712,7 @@ body:not(.post-template) .post-title {
 
     h1, h2, h3,
     h4, h5, h6 {
-        margin: 0 0 0.3em 0;
+        margin: 0 0 0.6em 0;
     }
 
     h1 {
@@ -1835,7 +1834,12 @@ body:not(.post-template) .post-title {
     .archive-template .main-header .page-description {
         display: none;
     }
-
+    /* changed by negimic */
+    .post-list .post-header {
+        margin-bottom: 2.4em;    
+        padding-bottom: 0.6em;
+        border-bottom: #ccc 1px dashed;
+    }
 }
 
 
