--- a/themes/casper/layouts/partials/li.html
+++ b/themes/casper/layouts/partials/li.html
@@ -22,8 +22,10 @@
             {{.Site.Params.author}}
         {{end}}
         {{if .Params.tags }}on
+            {{$len := len .Params.tags}}
+            {{$len := sub $len 1}}
             {{ range $index, $tag := .Params.tags }}
-                <a href="{{$baseurl}}tags/{{ $tag | urlize }}/">#{{ $tag }}</a>,
+                <a href="{{$baseurl}}tags/{{ $tag | urlize }}/">#{{ $tag }}</a>{{if lt $index $len}},{{end}}
             {{ end }}
         {{end}}
         <time class="post-date" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">
