--- a/themes/casper/layouts/index.html
+++ b/themes/casper/layouts/index.html
@@ -73,7 +73,7 @@
 </header>
 
 
-<main id="content" class="content" role="main">
+<main id="content" class="content content-index" role="main">
 
     {{ range .Data.Pages }}
         {{if eq .Type "index" }}
