--- a/themes/casper/static/css/screen.css
+++ b/themes/casper/static/css/screen.css
@@ -53,7 +53,7 @@ hr {
 mark { background: #FF0; color: #000; }
 code, kbd, pre,
 samp { font-family: monospace, serif; font-size: 1em; }
-pre { white-space: pre-wrap; }
+pre { white-space: pre; }
 q { quotes: "\201C" "\201D" "\2018" "\2019"; }
 small { font-size: 80%; }
 sub, sup {
@@ -345,7 +345,7 @@ code, tt {
     padding: 1px 3px;
     font-family: Inconsolata, monospace, sans-serif;
     font-size: 0.85em;
-    white-space: pre-wrap;
+    white-space: pre;
     border: #E3EDF3 1px solid;
     background: #F7FAFB;
     border-radius: 2px;
@@ -355,20 +355,20 @@ pre {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     margin: 0 0 1.75em 0;
-    border: #E3EDF3 1px solid;
+    /*border: #E3EDF3 1px solid;*/
     width: 100%;
-    padding: 10px;
+    /*padding: 10px;*/
     font-family: Inconsolata, monospace, sans-serif;
     font-size: 0.9em;
     white-space: pre;
     overflow: auto;
-    background: #F7FAFB;
+    /*background: #F7FAFB;*/
     border-radius: 3px;
 }
 
 pre code, pre tt {
     font-size: inherit;
-    white-space: pre-wrap;
+    white-space: pre;
     background: transparent;
     border: none;
     padding: 0;
@@ -927,12 +927,15 @@ body.nav-opened .menu-button .word {
     max-width: 740px;
     margin: 4rem auto;
     padding-bottom: 4rem;
-    border-bottom: #EBF2F6 1px dashed;
     word-wrap: break-word;
     -moz-hyphens: auto;
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto;
+}
+
+.content-index .post {
+    border-bottom: #EBF2F6 1px dashed;
 }
 
 
@@ -1049,6 +1052,8 @@ body:not(.post-template) .post-title {
     border-bottom: #ccc 1px dashed;
 }
 
+
+
 .post-template .post-title {
     margin-bottom: 0;
 }
@@ -1082,6 +1087,10 @@ body:not(.post-template) .post-title {
     display: none;
 }
 
+.post-content {
+    margin-bottom: 2rem;
+}
+
 /* Keep images centered, and allow images wider than the main
    text column to break out. */
 .post-content img {
@@ -1105,7 +1114,7 @@ body:not(.post-template) .post-title {
     position: relative;
     margin: 6rem 0 0 0;
     padding: 6rem 0 0 0;
-    border-top: #EBF2F6 1px solid;
+    /*border-top: #EBF2F6 1px solid;*/
 }
 
 .post-footer h4 {
@@ -1159,7 +1168,7 @@ body:not(.post-template) .post-title {
     position: absolute;
     top: 6rem;
     right: 0;
-    width: 180px;
+    width: 200px;
 }
 
 .post-footer .share a {
@@ -1420,7 +1429,7 @@ body:not(.post-template) .post-title {
 
 .site-footer {
     position: relative;
-    margin: 8rem 0 0 0;
+    margin: 2rem 0 0 0;
     padding: 0.5rem 15px;
     border-top: #EBF2F6 1px solid;
     font-family: "Open Sans", sans-serif;
