add page 'disqus'

--- a/themes/casper/layouts/_default/single.html
+++ b/themes/casper/layouts/_default/single.html
@@ -70,9 +70,13 @@
 
     {{ partial "share.html" . }}
 
-    {{ partial "disqus.html" . }}
-
   </footer>
+
+  <section class="post-comment">
+    <h4>Please comment!</h4>
+    {{ partial "disqus.html" . }}
+  </section>
+
 </article>
 
 </main>
