modify main image

--- a/themes/casper/layouts/partials/footer.html
+++ b/themes/casper/layouts/partials/footer.html
@@ -1,4 +1,5 @@
     </div>
+    <script type="text/javascript" src="{{.Site.BaseURL}}js/jquery.js"></script>
     <script type="text/javascript" src="{{.Site.BaseURL}}js/index.js"></script>
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/styles/agate.min.css">
