--- a/themes/casper/layouts/index.html
+++ b/themes/casper/layouts/index.html
@@ -1,11 +1,10 @@
 {{ partial "header.html" . }}
 
 {{if .Site.Params.cover}}
-<header class="main-header " style="background-image: url({{.Site.BaseURL}}{{.Site.Params.cover}})">
+<header class="main-header" style="background-image: url({{.Site.BaseURL}}{{.Site.Params.cover}})">
 {{else}}
 <header class="main-header no-cover">
 {{end}}
-
     <nav class="main-nav overlay clearfix">
         {{ if .Site.Params.logo }}
             <a class="blog-logo" href="{{ .Permalink }}"><img src="{{.Site.BaseURL}}{{ .Site.Params.logo }}" alt="Blog Logo" /></a>
@@ -14,9 +13,9 @@
             <a class="menu-button" href="#"><span class="burger">&#9776;</span><span class="word">Menu</span></a>
         {{else}}
             {{ if .Site.Params.RSSLink}}
-              <a class="menu-button icon-feed" href="{{.Site.Params.RSSLink }}">&nbsp;&nbsp;Subscribe</a>
+              <a class="menu-button icon-feed anm-diff" href="{{.Site.Params.RSSLink }}">&nbsp;&nbsp;Subscribe</a>
             {{else}}
-              <a class="menu-button icon-feed" href="{{ .RSSLink }}">&nbsp;&nbsp;Subscribe</a>
+              <a class="menu-button icon-feed anm-diff" href="{{ .RSSLink }}">&nbsp;&nbsp;Subscribe</a>
             {{end}}
         {{end}}
     </nav>
@@ -65,13 +64,12 @@
             &nbsp;
             {{end}}
 
-            <h1 class="page-title">{{ .Site.Title }}</h1>
-            <h2 class="page-description">{{ .Site.Params.description }}</h2>
+            {{ partial "svg.html" . }}
+            <h2 class="page-description anm-diff">{{ .Site.Params.description }}</h2>
         </div>
     </div>
-    <a class="scroll-down icon-arrow-left" href="#content"><span class="hidden">Scroll Down</span></a>
+    <a class="scroll-down icon-arrow-bottom anm-diff" href="#content"><span class="hidden">Scroll Down</span></a>
 </header>
-
 
 <main id="content" class="content content-index" role="main">
 
