--- a/themes/casper/layouts/_default/list.html
+++ b/themes/casper/layouts/_default/list.html
@@ -9,17 +9,12 @@
 	<header class="main-header tag-head no-cover">
 {{end}}
     <nav class="main-nav overlay clearfix">
-      {{ if .Site.Params.logo }}
+        <a class="menu-button home-button icon-arrow-left" href="{{ .Site.BaseURL }}"><span class="word">Home</span></a>
+    {{ if .Site.Params.logo }}
         <a class="blog-logo" href="{{.Site.BaseURL}}"><img src="{{.Site.BaseURL}}{{ .Site.Params.logo }}" alt="Home" /></a>
       {{end}}
       {{ if .Site.Menus.main }}
           <a class="menu-button" href="#"><span class="burger">&#9776;</span><span class="word">Menu</span></a>
-      {{else}}
-        {{ if .Site.Params.RSSLink}}
-          <a class="menu-button icon-feed" href="{{.Site.Params.RSSLink }}">&nbsp;&nbsp;Subscribe</a>
-        {{else}}
-          <a class="menu-button icon-feed" href="{{ .RSSLink }}">&nbsp;&nbsp;Subscribe</a>
-        {{end}}
       {{end}}
     </nav>
     <div class="vertical">
